--- a/index.html
+++ b/index.html
@@ -72,18 +72,22 @@
 
        <footer>
         <div class="container">
-            <div class="row">
-                <div class="col-sm"></div>
-                <div class="col-main"></div>
+            <div class="row3">
+                <div class="col-main2"></div>
+                <div class="col-sm1"></div>
+                <div class="col-sm1"></div>
+                <div class="col-sm1"></div>
+                <div class="col-sm1"></div>
             </div>
         </div>
         <div class="container">
             <nav>
-                <ul>
-                    <li>Logo</li>
-                    <li>Bottone</li>
+                 <ul>
+                    <li class="lo">Logo</li>
+                    <li class="lo">Bottone</li>
                 </ul>
             </nav>
+        </div>
        </footer>
     </body>
 </html>
