--- a/index.html
+++ b/index.html
@@ -71,22 +71,26 @@
        </main>
 
        <footer>
-        <div class="container">
-            <div class="row3">
-                <div class="col-main2"></div>
-                <div class="col-sm1"></div>
-                <div class="col-sm1"></div>
-                <div class="col-sm1"></div>
-                <div class="col-sm1"></div>
+        <div class="background-black">
+            <div class="container">
+                <div class="row3">
+                    <div class="col-main2"></div>
+                    <div class="col-sm1"></div>
+                    <div class="col-sm1"></div>
+                    <div class="col-sm1"></div>
+                    <div class="col-sm1"></div>
+                </div>
             </div>
         </div>
-        <div class="container">
-            <nav>
-                 <ul>
-                    <li class="lo">Logo</li>
-                    <li class="lo">Bottone</li>
-                </ul>
-            </nav>
+        <div class="background-black">
+            <div class="container">
+                <nav class="lista">
+                    <ul>
+                        <li class="lo">Logo</li>
+                        <li class="lo">Bottone</li>
+                    </ul>
+                </nav>
+            </div>
         </div>
        </footer>
     </body>
