--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <!-- header -->
        <header>
+        <!-- intestazione prima parte header  -->
             <div class="background-lightblue">
                 <div class="container">
-                    <div class="logo-content">
+                    <div class="row">
                         <div class="background-orange1">
                             Logo
                         </div>
@@ -32,20 +34,26 @@
                     </div>
                 </div>
             </div>
+            <!-- intestazione seconda parte header -->
             <div>
                 <div class="background-blue">
-                    <div class="background-pink"></div>
+                    <div class="container-sm">
+                        <div class="background-pink"></div>
+                    </div>
                 </div>
             </div>
        </header> 
      
+        <!-- main -->
         <main>
+            <!-- prima blocco main -->
             <div class="container">
-                <div class="row">
+                <div class="row2">
                     <div class="col-sm"></div>
                     <div class="col-main"></div>
                 </div>
             </div>
+            <!-- secondo blocco main -->
             <div class="background-grey">
                 <div class="container">
                     <div class="row1">
@@ -54,26 +62,29 @@
                     </div>
                 </div>
             </div>
+            <!-- terzo blocco main -->
             <div class="container">
-                <div class="row">
+                <div class="row2">
                     <div class="col-sm"></div>
                     <div class="col-main"></div>
                 </div>
             </div>
-
+            <!-- quarto blocco main -->
             <div class="background-grey">
                 <div class="container">
-                    <div class="row">
+                    <div class="row2">
                         <div class="backgroound-green"></div>
                     </div>
                 </div>
             </div>
        </main>
 
+       <!-- footer -->
        <footer>
+        <!-- fine pagine -->
         <div class="background-black">
             <div class="container">
-                <div class="row3">
+                <div class="row1">
                     <div class="col-main2"></div>
                     <div class="col-sm1"></div>
                     <div class="col-sm1"></div>
